Re-routed the nodes navigation menu item to go to the node /node route.

--- a/ckanext/tess/templates/header.html
+++ b/ckanext/tess/templates/header.html
@@ -96,7 +96,7 @@
                 <ul class="nav nav-pills">
                     {% block header_site_navigation_tabs %}
                     {{ h.build_nav_main(
-                    ('nodes', _('Nodes')),
+                    ('node', _('Nodes')),
                     ('search', _('Training materials')),
                     ('workflows', _('Workflows')),
                     ('group_index', _('Packages')),
