Change routing sonthat /node now goes to the new nodes code.

--- a/ckanext/tess/templates/header.html
+++ b/ckanext/tess/templates/header.html
@@ -96,11 +96,11 @@
                 <ul class="nav nav-pills">
                     {% block header_site_navigation_tabs %}
                     {{ h.build_nav_main(
-                    ('nodes', _('Nodes')),
+                    ('node', _('Nodes')),
                     ('search', _('Training materials')),
-                    ('workflows', _('Workflows')),
+                    ('workflow', _('Workflows')),
                     ('group_index', _('Packages')),
-                    ('events', _('Events')),
+                    ('event', _('Events')),
                     ('organizations_index', _('Content Providers')),
                     ('about', _('About'))
                     ) }}
