--- a/ckanext/tess/templates/node_old/EMBL-EBI.html
+++ b/ckanext/tess/templates/node_old/EMBL-EBI.html
@@ -1,6 +1,6 @@
 {% set node_name = 'EMBL-EBI' %}
 {% set country_code = 'EMBL-EBI' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {# Override node_template blocks here for custom configuration #}
 
@@ -11,7 +11,7 @@
     </div>
     <!--<div class="span2">-->
     <!--<a href="http://wwwdev.ebi.ac.uk/">-->
-    <!--<img src="/images/nodes/ebi/logo.png"/>-->
+    <!--<img src="/images/node_old/ebi/logo.png"/>-->
     <!--</a>-->
     <!--</div>-->
 </div><br>
