--- a/ckanext/tess/templates/node_old/ES.html
+++ b/ckanext/tess/templates/node_old/ES.html
@@ -1,6 +1,6 @@
-{% set node_name = 'Czech Republic' %}
-{% set country_code = 'CZ' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% set node_name = 'Spain' %}
+{% set country_code = 'ES' %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
