--- a/ckanext/tess/templates/node_old/hub.html
+++ b/ckanext/tess/templates/node_old/hub.html
@@ -10,11 +10,11 @@
 {% block subtitle %}{{ _('Nodes') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active"><a href="/nodes">Nodes</a></li>
+<li class="active"><a href="/node_old">Nodes</a></li>
 {% endblock %}
 
 {% block primary %}
-  {% snippet "nodes/snippets/helper.html" %}
+  {% snippet "node_old/snippets/helper.html" %}
 <div class="row-fluid">
     <div class="offset1 span10 module-content box" style="border: 1px solid #DDD; padding-bottom: 20px;">
         <div class="span6 col1">
