--- a/ckanext/tess/templates/node_old/snippets/nodes_list.html
+++ b/ckanext/tess/templates/node_old/snippets/nodes_list.html
@@ -5,94 +5,94 @@
     <nav>
         <ul class="unstyled nav nav-simple nav-facet-no-icon">
             <li class="nav-item">
-                <a href="/nodes/hub.html" title="">
+                <a href="/node_old/hub.html" title="">
                     <span>The Hub</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/BE.html" title="">
+                <a href="/node_old/BE.html" title="">
                     <span>Belgium</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/CZ.html" title="">
+                <a href="/node_old/CZ.html" title="">
                     <span>Czech Republic</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/DK.html" title="">
+                <a href="/node_old/DK.html" title="">
                     <span>Denmark</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/EMBL-EBI.html" title="">
+                <a href="/node_old/EMBL-EBI.html" title="">
                     <span>EMBL-EBI</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/EE.html" title="">
+                <a href="/node_old/EE.html" title="">
                     <span>Estonia</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/FI.html" title="">
+                <a href="/node_old/FI.html" title="">
                     <span>Finland</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/FR.html" title="">
+                <a href="/node_old/FR.html" title="">
                     <span>France</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/GR.html" title="">
+                <a href="/node_old/GR.html" title="">
                     <span>Greece</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/IL.html" title="">
+                <a href="/node_old/IL.html" title="">
                     <span>Israel</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/NO.html" title="">
+                <a href="/node_old/NO.html" title="">
                     <span>Norway</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/PT.html" title="">
+                <a href="/node_old/PT.html" title="">
                     <span>Portugal</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/SI.html" title="">
+                <a href="/node_old/SI.html" title="">
                     <span>Slovenia</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/ES.html" title="">
+                <a href="/node_old/ES.html" title="">
                     <span>Spain</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/SE.html" title="">
+                <a href="/node_old/SE.html" title="">
                     <span>Sweden</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/CH.html" title="">
+                <a href="/node_old/CH.html" title="">
                     <span>Switzerland</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/GB.html" title="">
+                <a href="/node_old/GB.html" title="">
                     <span>United Kingdom</span>
                 </a>
             </li>
             {{nodes}}
             {% for node in nodes: %}
             <li class="nav-item">
-                <a href="/nodes/{{node.country_code}}.html" title="">
+                <a href="/node_old/{{node.country_code}}.html" title="">
                     <span>{{node.name}}</span>
                 </a>
             </li>
