--- a/ckanext/tess/templates/node_old/EE.html
+++ b/ckanext/tess/templates/node_old/EE.html
@@ -1,6 +1,6 @@
-{% set node_name = 'France' %}
-{% set country_code = 'FR' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% set node_name = 'Estonia' %}
+{% set country_code = 'EE' %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
