--- a/ckanext/tess/templates/node_old/GR.html
+++ b/ckanext/tess/templates/node_old/GR.html
@@ -1,6 +1,6 @@
-{% set node_name = 'Portgal' %}
-{% set country_code = 'PT' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% set node_name = 'Greece' %}
+{% set country_code = 'GR' %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
