--- a/ckanext/tess/templates/node_old/IL.html
+++ b/ckanext/tess/templates/node_old/IL.html
@@ -1,6 +1,6 @@
-{% set node_name = 'Belgium' %}
-{% set country_code = 'BE' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% set node_name = 'Israel' %}
+{% set country_code = 'IL' %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
