--- a/ckanext/tess/templates/node_old/NO.html
+++ b/ckanext/tess/templates/node_old/NO.html
@@ -1,6 +1,6 @@
-{% set node_name = 'Italy' %}
-{% set country_code = 'IT' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% set node_name = 'Norway' %}
+{% set country_code = 'NO' %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
