--- a/ckanext/tess/templates/node_old/SI.html
+++ b/ckanext/tess/templates/node_old/SI.html
@@ -1,6 +1,6 @@
-{% set node_name = 'Switzerland' %}
-{% set country_code = 'CH' %}
-{% extends "nodes/snippets/node_template.html" %}
+{% set node_name = 'Slovenia' %}
+{% set country_code = 'SI' %}
+{% extends "node_old/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
