--- a/ckanext/tess/templates/node/snippets/materials_for_node.html
+++ b/ckanext/tess/templates/node/snippets/materials_for_node.html
@@ -5,11 +5,11 @@ hub - True if we're on the hub page and we need to have the header for each sect
 #}
 <h2>Training materials</h2>
 <hr/>
-{% set datasets = h.get_node_materials(node) %}
-{% if datasets != None: %}
+{% set training_materials = h.get_node_materials(node) %}
+{% if training_materials|length > 0 %}
     <ul style="list-style: outside none none; margin-left: 5px;" >
-    {% for dataset in datasets %}
-        {% snippet 'snippets/package_item.html', package=dataset %}
+    {% for training_material in training_materials %}
+        {% snippet 'snippets/package_item.html', package=training_material %}
     {% endfor %}
     </ul>
 {% else %}
