--- a/ckanext/tess/templates/node/snippets/node_item.html
+++ b/ckanext/tess/templates/node/snippets/node_item.html
@@ -19,7 +19,7 @@ Example:
 <li class="media-item">
   {% block image %}
     {% if node.country_code: %}
-        <img src="/images/node_flags/{{node.country_code}}.png">
+        <img src="/images/node_flags/{{node.country_code}}.png" class="img-circle" style="max-height:60px;">
     {% else %}
         <img src="{{ node.image_display_url or h.url_for_static('/images/empty.gif') }}" alt="{{ node.name }}" class="media-image">
     {% endif %}
@@ -29,18 +29,40 @@ Example:
 
   {% endblock %}
   {% block node_info %}
-    <b>Head of node:</b> {{node.hon}} <br>
-    <b>Training coordinator</b>: {{node.trc}}<i></i><br>
-    <b>Technical coordinator</b>: {{node.tec}} <i></i><br>
+    <p>
+        <b>Head of node:</b><br>
+        {% if node.hon: %}
+            {{node.hon}}
+        {% else %}
+            <span class="empty">None</span>
+        {% endif %}
+    </p>
+    <p>
+        <b>Training coordinator:</b><br>
+        {% if node.trc: %}
+            {{node.trc}}
+        {% else %}
+            <span class="empty">None</span>
+        {% endif %}
+    </p>
+        <p>
+        <b>Technical coordinator:</b><br>
+        {% if node.tec: %}
+            {{node.tec}}
+        {% else %}
+            <span class="empty">None</span>
+        {% endif %}
+    </p>
   {% endblock %}
-  {% block description %}
-    {% if node.description %}
-      <p>{{ h.markdown_extract(node.description, extract_length=80) }}</p>
-    {% endif %}
-  {% endblock %}
+  <!--{% block description %}-->
+    <!--{% if node.description %}-->
+      <!--<p>{{ h.markdown_extract(node.description, extract_length=80) }}</p>-->
+    <!--{% endif %}-->
+  <!--{% endblock %}-->
   {% block datasets %}
-    {% if node.packages %}
-      <strong class="count">{{ ungettext('{num} training material', '{num} training materials', node.packages).format(num=node.packages) }}</strong>
+    {% set training_materials = h.get_node_materials(node) %}
+    {% if training_materials|length > 0 %}
+      <strong class="count">{{ training_materials|length }} training material</strong>
     {% else %}
       <span class="count">{{ _('0 training materials') }}</span>
     {% endif %}
