--- a/ckanext/tess/templates/node/index.html
+++ b/ckanext/tess/templates/node/index.html
@@ -15,17 +15,16 @@
 {% endblock %}
 
 {% block primary_content_inner %}
-  <h1 class="hide-heading">{% block page_heading %}{{ _('Nodes') }}{% endblock %}</h1>
-  {#% block nodes_search_form %}
-    {% snippet 'snippets/search_form.html', type='node', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search content providers...'), show_empty=request.params, no_bottom_border=true if c.page.items %}
-  {% endblock %#}
+   <h1 class="hide-heading">{% block page_heading %}{{ _('Nodes') }}{% endblock %}</h1>
+  {% block nodes_search_form %}
+    {% snippet 'snippets/search_form.html', type='node', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search nodes...'), show_empty=request.params, no_bottom_border=true if c.page.items %}
+  {% endblock %}
   {% block nodes_list %}
     {{results}}
     {% if c.page.items or request.params %}
       {% if c.page.items %}
         {% snippet "node/snippets/node_list.html", nodes=c.page.items %}
      {% endif %}
-      {{ c.page.collection }}
     {% else %}
       <p class="empty">
         {{ _('There are currently no ELIXIR nodes for this site') }}.
