--- a/ckanext/tess/templates/snippets/node.html
+++ b/ckanext/tess/templates/snippets/node.html
@@ -1,18 +1,21 @@
 {% set url = h.url_for(controller='ckanext.tess.controller:NodeController', action='read', id=node.get('name')) %}
-{% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '.png') %}
-
+{% if node.get('country_code') %}
+    {% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '.png') %}
+{% endif %}
 {% block info %}
 <div class="module module-narrow module-shallow context-info">
     <h2 class="module-heading"><div class="icon-elixir"></div> {{ _('ELIXIR Node') }}</h2>
     <section class="module-content">
 
         {% block image %}
+            {% if logo_link %}
             <div class="image">
                 <a href={{url}}>
                    <img src="{{logo_link}}"
                      alt="{{ node.get('display_name') }}">
                 </a>
             </div>
+            {% endif %}
         {% endblock %}
         <a href={{url}} style="text-align:center">
             <h1 class="heading">{{ node.get('display_name') }}</h1>
